src/parser/snapshots/digital_link_rs__parser__primitive__tests__escaped_hash_should_not_be_xchar.snap
---
source: src/parser/primitive.rs
expression: "xchar(\"%23\")"
---
Err(
    Error(
        Error {
            input: "%23",
            code: Tag,
        },
    ),
)
