src/parser/snapshots/digital_link_rs__parser__primitive__tests__escaped_question_mark_should_be_ychar.snap
---
source: src/parser/primitive.rs
expression: "ychar(\"%3F\")"
---
Err(
    Error(
        Error {
            input: "%3F",
            code: Tag,
        },
    ),
)
