src/parser/snapshots/digital_link_rs__parser__primitive__tests__hash_should_not_be_xchar.snap
---
source: src/parser/primitive.rs
expression: "xchar(\"#\")"
---
Err(
    Error(
        Error {
            input: "#",
            code: Tag,
        },
    ),
)
