src/parser/snapshots/digital_link_rs__parser__primitive__tests__hash_should_not_be_ychar.snap
---
source: src/parser/primitive.rs
expression: "ychar(\"#\")"
---
Err(
    Error(
        Error {
            input: "#",
            code: Tag,
        },
    ),
)
